samples/_failures_safe/1761528043_727f04_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_55e02da5.c: In function ‘main’:
./samples/SAFE/__tmp_55e02da5.c:154:24: error: expected ‘)’ at end of input
  154 |         if (!push_token
      |            ~           ^
      |                        )
./samples/SAFE/__tmp_55e02da5.c:154:9: error: expected declaration or statement at end of input
  154 |         if (!push_token
      |         ^~
./samples/SAFE/__tmp_55e02da5.c:154:9: error: expected declaration or statement at end of input
